Implemented code swagger Api
Implemented code swagger Api
