# controllers/employeesController.js
@@ -2,58 +2,65 @@ const Employee = require('../model/Employee');
 
 // CRUD
 const createNewEmployee = async (req, res) => {
-    if(!req?.body?.firstname || !req?.body?.lastname) {
-        return res.status(400).json({'message': 'First and Last names are required.'});
+    if (!req?.body?.firstname || !req?.body?.lastname)
+    {
+        return res.status(400).json({ 'message': 'First and Last names are required.' });
     }
-    try{
+    try
+    {
         const result = await Employee.create({
             firstname: req.body.firstname,
             lastname: req.body.lastname
         });
         res.status(201).json(result);
-    } catch (err) {
+    } catch (err)
+    {
         console.error(err);
     }
-}
+};
 
-const getAllEmployees =  async (req, res) => {
+const getAllEmployees = async (req, res) => {
     const employees = await Employee.find();
-    if(!employees) return res.status(204).json({'message': 'No employees found'});
+    if (!employees) return res.status(204).json({ 'message': 'No employees found' });
     res.json(employees);
-}
+};
 
 const updateEmployee = async (req, res) => {
-    if(!req?.body?.id) {
-        return res.status(400).json({'message': 'Employee ID required'});
+    if (!req?.params?.id)
+    {
+        return res.status(400).json({ 'message': 'Employee ID required' });
     }
-    const employee = await Employee.findOne({_id: req.body.id}).exec();
-    if(!employee) {
-        return res.status(204).json({'message': `No employee matches ID ${req.body.id}.`})
+    const employee = await Employee.findOne({ _id: req.params.id }).exec();
+    if (!employee)
+    {
+        return res.status(204).json({ 'message': `No employee matches ID ${ req.body._id }.` });
     }
-    if(req.body?.firstname) employee.firstname = req.body.firstname;
-    if(req.body?.lastname) employee.lastname = req.body.lastname;
+    if (req.body?.firstname) employee.firstname = req.body.firstname;
+    if (req.body?.lastname) employee.lastname = req.body.lastname;
     const result = await employee.save();
     res.json(result);
-}
+};
 
 const deleteEmployee = async (req, res) => {
-    if(!req?.body?.id) return res.status(400).json({'message': 'Employee ID required'});
+    if (!req?.body?.id) return res.status(400).json({ 'message': 'Employee ID required' });
     const employee = await Employee.findOne({ _id: req.body.id }).exec();
-    if(!employee) {
-        return res.status(204).json({'message':`No employee matches ID ${req.body.id}.`});
+    if (!employee)
+    {
+        return res.status(204).json({ 'message': `No employee matches ID ${ req.body.id }.` });
     }
     const result = await employee.deleteOne();
     res.json(result);
-}
+};
 
 const getEmployee = async (req, res) => {
-    if(!req?.params?.id) return res.status(400).json({'message': 'Employee ID required'});
-    const employee = await Employee.findOne({ _id: req.params.id })
-    if(!employee) {
-        return res.status(204).json({'message': `No employee matches ID ${req.params.id}.`})
+    if (!req?.params?.id) return res.status(400).json({ 'message': 'Employee ID required' });
+    const employee = await Employee.findOne({ _id: req.params.id });
+    if (!employee)
+    {
+        return res.status(204).json({ 'message': `No employee matches ID ${ req.params.id }.` });
     }
     res.json(employee);
-}
+};
 
 
 module.exports = {
@@ -62,5 +69,5 @@ module.exports = {
     updateEmployee,
     deleteEmployee,
     getEmployee
-    
-}
+
+};
